@@ -1,5 +1,6 @@
 package com.virtuoel.unreal.handler;
 
+import net.minecraft.init.Blocks;
 import net.minecraft.init.Items;
 import net.minecraft.item.Item;
 import net.minecraft.item.ItemStack;
@@ -26,10 +27,48 @@ public class UnrealFuelHandler implements IFuelHandler
 		{
 			return 1600;
 		}
-		else if(fuel.getItem()==Items.blaze_powder)
+		
+		if(fuel.getItem()==Items.blaze_powder)
 		{
 			return 200*2;
 		}
+		else if(fuel.getItem()==Items.boat)
+		{
+			return 300;
+		}
+		else if(fuel.getItem()==Items.sign)
+		{
+			return 300;
+		}
+		else if(fuel.getItem()==Item.getItemFromBlock(Blocks.ladder))
+		{
+			return 300;
+		}
+		else if(fuel.getItem()==Item.getItemFromBlock(Blocks.oak_door))
+		{
+			return 300;
+		}
+		else if(fuel.getItem()==Item.getItemFromBlock(Blocks.birch_door))
+		{
+			return 300;
+		}
+		else if(fuel.getItem()==Item.getItemFromBlock(Blocks.spruce_door))
+		{
+			return 300;
+		}
+		else if(fuel.getItem()==Item.getItemFromBlock(Blocks.jungle_door))
+		{
+			return 300;
+		}
+		else if(fuel.getItem()==Item.getItemFromBlock(Blocks.acacia_door))
+		{
+			return 300;
+		}
+		else if(fuel.getItem()==Item.getItemFromBlock(Blocks.dark_oak_door))
+		{
+			return 300;
+		}
+		
 		return 0;
 	}
 }
